--- a/helix-p4d/Dockerfile
+++ b/helix-p4d/Dockerfile
@@ -2,7 +2,7 @@
 # Docker configuration for P4D
 # --------------------------------------------------------------------------------
 
-FROM ubuntu:focal
+FROM ubuntu:noble
 
 LABEL vendor="Sourcegraph"
 LABEL maintainer="Joe Chen (joe@sourcegraph.com)"
@@ -11,7 +11,7 @@ LABEL maintainer="Joe Chen (joe@sourcegraph.com)"
 RUN apt-get update && \
   apt-get install -y wget gnupg2 && \
   wget -qO - https://package.perforce.com/perforce.pubkey | apt-key add - && \
-  echo "deb http://package.perforce.com/apt/ubuntu focal release" > /etc/apt/sources.list.d/perforce.list && \
+  echo "deb http://package.perforce.com/apt/ubuntu noble release" > /etc/apt/sources.list.d/perforce.list && \
   apt-get update
 
 # --------------------------------------------------------------------------------
@@ -19,9 +19,9 @@ RUN apt-get update && \
 # --------------------------------------------------------------------------------
 
 # Create perforce user and install Perforce Server
-# Do in-page search over https://package.perforce.com/apt/ubuntu/dists/focal/release/binary-amd64/Packages
+# Do in-page search over https://package.perforce.com/apt/ubuntu/dists/noble/release/binary-amd64/Packages
 # for both "Package: helix-p4d" and "Package: helix-swarm-triggers".
-RUN apt-get update && apt-get install -y helix-p4d=2024.1-2625008~focal helix-swarm-triggers=2024.3-2628402~focal
+RUN apt-get update && apt-get install -y helix-p4d=2025.1-2768110~noble helix-swarm-triggers=2025.2-2785633~noble
 # Add external files
 COPY files/restore.sh /usr/local/bin/restore.sh
 COPY files/setup.sh /usr/local/bin/setup.sh
@@ -44,7 +44,7 @@ ARG P4NAME=master
 ARG P4TCP=1666
 ARG P4USER=admin
 ARG P4PASSWD=pass12349ers
-ARG P4CASE=-C0
+ARG P4CASE=-C1
 ARG P4CHARSET=utf8
 
 # Dynamic Environment
